$Id: History,v 1.1 1999-01-07 16:06:41 gunter Exp $

G3toG4 Modification History (reverse chronological order, please !)
--------------------------------------------------------------------
g3tog4-00-03-04 12-Nov-1998 Bill Lockman
- G3medtable: dynamically instantiate a G4FieldManager(field*) object and
  pass it to G4LogicalVolume by pointer.
- adapt G3toG3PhysicsList.* from N02

g3tog4-00-03-03 02-Nov-1998 Bill Lockman
- src: Added G3toG4RotationMatrix class, remove G3toG3SetRotation class;
- test: add parity.dat to test parity inversions

g3tog4-00-03-02 05-Oct-1998 Bill Lockman
- GNUmakefile, test/GNUmakefile mods by John Allison

g3tog4-00-03-01 21-Sep-1998 BIll Lockman
- svtwaf.dat: shrank size of svt mother volume just enclose the detectors.

g3tog4-00-02-02 17-Sep-1998 Bill Lockman
- implemented G4 capitalization convention for class names. g3tog4->G3toG4.
- clGeometry.cc: introduced G3toG4VisManager class; 
  added RunManager->Initialize
- added G3toG4SetRotation class to set rotation matrix elements directly,
  including improper rotations (parity transforms). Check for orthonormality
  and left-handedness.

g3tog4-00-02-01 21-Aug-1998 Bill Lockman
- GNUmakefile: removed 'bin' dependence from 'first' target

g3tog4-00-01-02 16-Jul-1998 Bill Lockman
- Mods to test/GNUmakefile by B. Lockman to link

g3tog4-00-01-01 07-Jul-1998 Gabriele Cosmo
- Several updates to test/GNUmakefile by J.Allison
- Removed obsolete tag g3tog4-00-07-00.

g3tog4-00-07-00 29-Jun-1998 Bill Lockman
- GNUmakefile:
- added an 'examples' target to build the examples in test/
- example/*/cltog4.* moved to test/. Removed all files in example from repo.
- test/GNUmakefile: added G4EXLIB=true flag
- test/clGeometry.cc, cltog4.cc: replaced #include "*.cc" with "*.hh" 

g3tog4-00-06-06 26-Jun-1998 Gabriele Cosmo
- Again changes to GNUmakefiles according to the new structure in
  processes/electromagnetic. (by J.Allison)

g3tog4-00-06-05 23-Jun-1998 Bill Lockman
- GNUmakefile:  